Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26611

infinite recursion occurs when using QPlaceResult comparison operators

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.0.0 Beta 1
    • 5.0.0
    • Location: Places
    • None
    • 098b4bc12fb6571fedcb8690164f8ae61135665b 173d55eff6f5cc5ae0391a9f26f9ff5f2bad58a4

      QPlaceResultPrivate::compare() invokes itself instead of calling QPlaceSearchResultPrivate::compare() leading to infinite recursion.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            abcd abcd (closed Nokia identity) (Inactive)
            abcd abcd (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes