Fixes for QPlaceResult + unit tests

-Comparing QPlaceResult objects resulted in a crash
due to a comparison function incorrectly calling itself recursively.
-Copying a QPlaceResult object did not copy the data fields
from QPlaceSearchResult

This patch fixes the above issues and also has a comprehensive
set of unit tests for QPlaceResult.

Task-number: QTBUG-26611

Change-Id: I9b6dcc90e5f061d2e268051c682291adf1b04c7b
Reviewed-by: Aaron McCarthy <aaron.mccarthy@nokia.com>